fix: product base image distortion
- Product base image now smaller

--- a/src/components/templates/product-description-template/ProductDescriptionTemplate.scss
+++ b/src/components/templates/product-description-template/ProductDescriptionTemplate.scss
@@ -13,9 +13,12 @@
     & .product-image {
       flex: 4;
       margin-right: 8rem;
+      display: flex;
+      width: 100%;
+      height: 50vh;
 
       & .main-product-image {
-        @include global.full-container-size;
+        margin: 0 auto;
       }
     }
 
